# Mechanish-enrichment-NeuroMMSig

./: .gitignore  IFN-dgexp.csv  Pathway_network-rep.ipynb  README.md  Reverse_causal_reasoning.ipynb  setup.cfg  test.graphml
.ipynb_checkpoints/: Network_visualization-checkpoint.ipynb  Reverse_causal_reasoning-checkpoint.ipynb
data/: GEO2R processing.tsv  IFN-gamma_pathway.csv  IFN-gamma_pathway.txt  p53_pathway.csv  p53_pathway.txt
src/rcr/: cli.py  dgexp_edit.py  network.py  reverse_causal_reasoning.py
src/rcr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/reverse_causal_reasoning/: __init__.py  cli.py  constants.py  dgexp_edit.py  network.py  reverse_causal_reasoning.py
src/reverse_causal_reasoning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: gene_exp_test.csv  rcr_test.py  test.graphml  test_data.csv  test_data.tsv
