[metadata]
name = reverse_causal_reasoning
version = 0.0.1

# Author information
author = Yojana Gadiya
author_email = s0yogadi@uni-bonn.de
maintainer = Yojana Gadiya
maintainer_email = s0yogadi@uni-bonn.de

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords = Bioinformatics, Reverse Causal Reasoning, Breath First Search, Networks, Pathways

[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rcr = reverse_causal_reasoning.cli:cli

